# bible-work

./: .gitignore  README.md  pyproject.toml  run_gui.bat  run_gui.sh
.github/workflows/: hosea-x-fronting.yml
docs/: hosea-x-fronting-findings.md  hosea-x-workflow.md
scripts/: analyze_hosea_x_fronting.py  check_tab_agreement.py  run_hosea_phase2_fixed.py
src/bhs_hierarchy/: __init__.py  check_tab.py  cli.py  ctt.py  decisions.py  depth.py  graph.py  gui.py  tf_loader.py  viz.py
