[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bhs-hierarchy"
version = "0.1.0"
description = "BHSA clause_atom hierarchy tooling with mother-daughter visualization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "text-fabric>=12.0",
  "typer>=0.12",
  "rich>=13.0",
  "graphviz>=0.20.3",
  "pyyaml>=6.0",
]

[project.scripts]
bhs-hier = "bhs_hierarchy.cli:app"
bhs-hier-gui = "bhs_hierarchy.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
